--- a/old/FEB 11 2022/index.html
+++ b/old/FEB 11 2022/index.html
@@ -21,11 +21,11 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="index.html">consciousness-only-ltd.biz</a>
+                <a class="navbar-brand" href="#!">consciousness-only-ltd.biz</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="aboutus.html">About</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Buy</a>
@@ -51,22 +51,10 @@
                             Sign Up for Newsletter
                         </button>
                     </form>
-        </nav>
-
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a
-                        href="index.html">Home</a></li>
-                        <li class="breadcrumb-item active">About Us</li>
-                    </ol>
-                    <h2>About Us</ht><h2>
-                     <hr /> 
                 </div>
             </div>
-        </div>
-        
+        </nav>
+
         <div id="newsModal" class="modal fade" role="dialog" modal-lg>
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
@@ -98,7 +86,7 @@
                                     <div class="form-group row">
                                         <div class="col col-form-label">
                                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                                            <button type="submit" class="btn btn-primary">Click Here to Join</button>
+                                            <button type="button" class="btn btn-primary">Click Here to Join</button>
                                         </div>
                                     </div>
                             </form>
@@ -108,14 +96,12 @@
             </div>
         </div>
 
-<!-- Test -->
-
         <!-- Product section-->
         <section class="py-5">
             <div class="container px-4 px-lg-5 my-5">
                 <div class="row gx-4 gx-lg-5 align-items-center">
                      <!-- 600x700 front image size-->
-                    <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0" src="/assets/fractal.gif"></div>
+                    <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0" src="/assets/ems.gif"></div>
                     <div class="col-md-6">
                         <div class="small mb-1">Ambient Music Series</div>
                         <h1 class="display-5 fw-bolder">Release 001</h1>
@@ -143,7 +129,7 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                            <img class="card-img-top" src="/assets/conwiki.png" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -164,7 +150,7 @@
                             <!-- Sale badge-->
                             <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                            <img class="card-img-top" src="/assets/shaktimodern.jpeg" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -194,7 +180,7 @@
                             <!-- Sale badge-->
                             <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                            <img class="card-img-top" src="/assets/unconscious-mind-journal-psyche.jpeg" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
